Fixed jumbotron height on mobile

--- a/2015_version/css/responsive-slider.css
+++ b/2015_version/css/responsive-slider.css
@@ -32,16 +32,13 @@
 }
 .responsive-slider .slides ul li .slide-body img {
   width: 100%;
+  min-height: 275px;
 }
 .responsive-slider .slides ul li .slide-body .caption {
   position: absolute;
   color: #fff;
   text-shadow: 0px 1px 0px #000000;
 }
-.responsive-slider .slides ul li .slide-body .caption.header {
-  top: 45%;
-}
-
 /* Center the jumbotron captions */
   #jumbotron-cs229 {
     width: 100%;
@@ -50,12 +47,9 @@
   #jumbotron-twitch {
     width: 100%;
   }
-
-@media (max-width: 1199px){
-.responsive-slider .slides ul li .slide-body .caption.header {
+  .responsive-slider .slides ul li .slide-body .caption.header {
   top: 45%;
-} 
-}
+  } 
 .responsive-slider .slides ul li .slide-body .caption.header h1 {
   font-size: 50px;
   padding: 0 3px 0 3px;
@@ -68,26 +62,19 @@
   font-size: 35px;
 }
 @media (min-width: 481px) and (max-width: 767px) {
-  .responsive-slider .slides ul li .slide-body .caption.header {
-  top: 45%;
-  } 
-
   .responsive-slider .slides ul li .slide-body .caption.header h2 {
     font-size: 22px;
   }
   .responsive-slider .slides ul li .slide-body .caption.header h4 {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 @media (max-width: 480px) {
-  .responsive-slider .slides ul li .slide-body .caption.header {
-  top: 45%;
-  } 
   .responsive-slider .slides ul li .slide-body .caption.header h2 {
-    font-size: 14px;
+    font-size: 12px;
   }
   .responsive-slider .slides ul li .slide-body .caption.header h4 {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 .responsive-slider .slides ul li .slide-body .caption.sub {
